// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SsoLoginForm renders errors 1`] = `
<Fragment>
  <Error
    error="asplode. Please contact login.issues@sparkpost.com for assistance."
  />
  <form>
    <Stack>
      <Field
        autoFocus={true}
        component={[Function]}
        errorInLabel={true}
        id="username"
        label="Email or Username"
        name="username"
        normalize={[Function]}
        validate={[Function]}
      />
      <Box>
        <Button
          submit={true}
          variant="primary"
        >
          Log In
        </Button>
      </Box>
    </Stack>
  </form>
</Fragment>
`;

exports[`Component: SsoLoginForm should render 1`] = `
<Fragment>
  <form>
    <Stack>
      <Field
        autoFocus={true}
        component={[Function]}
        errorInLabel={true}
        id="username"
        label="Email or Username"
        name="username"
        normalize={[Function]}
        validate={[Function]}
      />
      <Box>
        <Button
          submit={true}
          variant="primary"
        >
          Log In
        </Button>
      </Box>
    </Stack>
  </form>
</Fragment>
`;

exports[`Component: SsoLoginForm should render during login 1`] = `
<Fragment>
  <form>
    <Stack>
      <Field
        autoFocus={true}
        component={[Function]}
        errorInLabel={true}
        id="username"
        label="Email or Username"
        name="username"
        normalize={[Function]}
        validate={[Function]}
      />
      <Box>
        <Button
          disabled={true}
          submit={true}
          variant="primary"
        >
          Logging In
        </Button>
      </Box>
    </Stack>
  </form>
</Fragment>
`;
